--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -1,19 +1,25 @@
 .button {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	box-sizing: border-box;
-	width: 210px;
-	height: 50px;
-	text-align: center;
-	border: 1px solid #000000;
-	cursor: pointer;
-}
-
-.button:active {
-	background: var(--gold, #ffc802);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  width: 210px;
+  height: 50px;
+  text-align: center;
+  border: 1px solid #000;
+  cursor: pointer;
+  background-color: #ffc802;
+  transition: background-color 0.5s ease;
 }
 
 .button:hover {
-	background: var(--gold, #ffc802);
+  background-color: #ffedab;
+}
+
+.button_secondary {
+  background-color: #fff;
+}
+
+.button_secondary:hover {
+  background-color: #000;
 }
